@@ -1,5 +1,14 @@
 2012-03-29  Kaz Kylheku  <kaz@kylheku.com>
 
+	* arith.c (dmod): New static function.
+	(mod): Use dmod instead of fmod directly, to calculate
+	the correct semantics for combinations of
+	negative operands in the floating point domain also.
+
+	* txr.1: Documented /, trunc and mod.
+
+2012-03-29  Kaz Kylheku  <kaz@kylheku.com>
+
 	* txr.1: Documented +, - and *.
 
 2012-03-29  Kaz Kylheku  <kaz@kylheku.com>
